--- a/canteen-frontend/package.json
+++ b/canteen-frontend/package.json
@@ -3,12 +3,14 @@
   "private": true,
   "version": "0.0.0",
   "type": "module",
-  "scripts": {
-    "dev": "vite",
-    "build": "vite build",
-    "lint": "eslint .",
-    "preview": "vite preview"
-  },
+"scripts": {
+  "dev": "vite",
+  "build": "vite build",
+  "start": "vite preview",
+  "lint": "eslint .",
+  "preview": "vite preview"
+},
+
   "dependencies": {
     "axios": "^1.10.0",
     "react": "^19.1.0",
